--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "babel-jest": "24.7.1",
     "cuid": "^2.1.6",
-    "date-fns": "^2.0.0-alpha.27",
+    "date-fns": "2.0.0-alpha.27",
     "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
